force-app/main/default/objects/Capital_Gains__c/Capital_Gains__c.object-meta.xml
<CustomObject>
    <label>Capital Gains</label>
    <nameField>
        <displayFormat>CG-{0000}</displayFormat>
        <label>Capital Gains Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Capital Gains</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>