force-app/main/default/objects/Capital_Gains__c/fields/Price_Gains__c.field-meta.xml
<CustomField>
    <fullName>Price_Gains__c</fullName>
    <formula>Sold__r.Price__c - Purchase__r.Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Price Gains</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>