force-app/main/default/objects/Capital_Gains__c/fields/Purchase__c.field-meta.xml
<CustomField>
    <fullName>Purchase__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Purchase</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Asset.Status</field>
            <operation>equals</operation>
            <value>Purchase</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Capital Gains Transactions</relationshipLabel>
    <relationshipName>Capital_Gains_Purchase</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>