force-app/main/default/objects/Capital_Gains__c/fields/Tax_Discount__c.field-meta.xml
<CustomField>
    <fullName>Tax_Discount__c</fullName>
    <formula
  >(Sold__r.PurchaseDate - Purchase__r.PurchaseDate) &gt; 365</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tax Discount</label>
    <type>Checkbox</type>
</CustomField>