force-app/main/default/objects/Capital_Gains__c/fields/Total_Capital_Gains__c.field-meta.xml
<CustomField>
    <fullName>Total_Capital_Gains__c</fullName>
    <formula>Amount__c *  Price_Gains__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Capital Gains</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>