force-app/main/default/objects/Capital_Gains__c/recordTypes/Gains.recordType-meta.xml
<RecordType>
    <fullName>Gains</fullName>
    <active>true</active>
    <label>Gains</label>
</RecordType>